--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # \u6570\u636E\u5E93\u57FA\u672C\u914D\u7F6E
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/OA_XIAOHU?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql:///OA_XIAOHU?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
